# rimes-project

./: README.md
backend/: pyproject.toml  requirements.txt
backend/pm/: settings.py  urls.py
backend/products/: apis.py  models.py  urls.py
backend/products/migrations/: 0001_initial.py  0002_alter_product_name.py
frontend/: package-lock.json  package.json
frontend/api/: products.js
frontend/app/: page.js
frontend/app/components/: ProductForm.js  ProductList.js  SearchBar.js
