[tool.poetry]
name = "project-management-assignment"
version = "0.1.0"
description = "Building a simpole product management application with React and Django API"
authors = ["Md. Abdul Alim <alim.abdul.5915@gmail.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
Django = "^5.1.1"
djangorestframework = "^3.15.2"
django-cors-headers = "^4.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
